<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/player_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Results"
        android:textSize="50dp" />

    <TextView
        android:id="@+id/player_one_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="100dp"
        android:text="@string/player_one_score_text"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/player_two_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_two_score_text"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/winner_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Player 1 wins!"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="80dp"
        android:textSize="30dp" />

    <Button
        android:id="@+id/button_new_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/btn_new_game" />

</LinearLayout>